--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -10,6 +10,11 @@
 	</div>
 
 	<div class="row">
-		<input type="text" id="name" name="user[email]" placeholder="Email">
+		<input type="text" id="email" name="user[email]" placeholder="Email">
+	</div>
+
+	<div class="row">
+		<button type="submit" id="submit" class="btn-success" formmethod="post"
+			formaction="/signup">Signup!</button>
 	</div>
 </form>
