--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -324,7 +324,7 @@ ul {
 	line-height: 80px;
 }
 
-/* GREEN SECTION - TESTIMONIAL */
+/* GREEN SECTION - CAROUSEL */
 
 #green {
 	padding-top: 90px;
@@ -337,6 +337,10 @@ ul {
 #green tgr {
 	font-weight: 700;
 	letter-spacing: 1px;
+} 
+
+.cann-molecule {
+	min-height: 468px;
 }
 
 /* FOOTER */
