--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -178,7 +178,7 @@ input {
 
 /* HEADER SECTION */
 #h {
-	background: url(image_url("header.jpg")) no-repeat center top;
+	background: url("header.jpg") no-repeat center top;
 	padding-top: 180px;
 	text-align:center;
 	background-attachment: relative;
@@ -235,7 +235,7 @@ input {
 
 /* SEP */
 #sep {
-	background: url(image_url("sep.jpg")) no-repeat center top;
+	background: url("sep.jpg") no-repeat center top;
 	padding-top: 90px;
 	text-align:center;
 	background-attachment: relative;
