--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -169,26 +169,71 @@
     <div id="green">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-md-offset-3 centered">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-              <!-- Wrapper for slides -->
-              <div class="carousel-inner">
-                <div class="item active">
-									<img src="<%= asset_path('gallery_1.png') %>" class="cann-molecule"></img>
-                </div>
-                <div class="item">
-									<img src="<%= asset_path('gallery_2.png') %>" class="cann-molecule"></img>
-                </div>
-                <div class="item">
-									<img src="<%= asset_path('gallery_3.png') %>" class="cann-molecule"></img>
-                </div>
-								<div class="item">
-									<img src="<%= asset_path('gallery_4.png') %>" class="cann-molecule"></img>
-                </div>
-              </div>
-            </div><!--/Carousel-->
+					<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+						<!-- Wrapper for slides -->
+						<div class="carousel-inner">
+							<div class="item active">
+								<div class="col-md-6">
+									<img src="<%= asset_path('gallery1_edit_green.jpg') %>" class="cann-molecule"></img>
+								</div>
+								<div class="col-md-6">
+									<h2>Cannabigerol (CBG)</h2>
+									<ul class="cannab-attr">
+										<li>soporific</li>
+										<li>antimicrobial</li>
+										<li>lowers interocular pressure</li>
+										<li>anti-tumor</li>
+									</ul>
+								</div>
+							</div>
+							<div class="item">
+								<div class="col-md-6">
+									<img src="<%= asset_path('gallery2_edit_green.jpg') %>" class="cann-molecule"></img>
+								</div>
+								<div class="col-md-6">
+									<h2>Cannabidiol (CBD)</h2>
+									<ul class="cannab-attr">
+										<li>antispasmodic</li>
+										<li>anxiolytic</li>
+										<li>antioxidant</li>
+										<li>muscle relaxant</li>
+										<li>analgesic</li>
+										<li>anti-tumor proliferation</li>
+										<li>anti-tumor migration</li>
+									</ul>
+								</div>
+							</div>
+							<div class="item">
+								<div class="col-md-6">
+									<img src="<%= asset_path('gallery3_edit_green.jpg') %>" class="cann-molecule"></img>
+								</div>
+								<div class="col-md-6">
+									<h2>Tetrahydrocannabinol (THC)</h2>
+									<ul class="cannab-attr">
+										<li>analgesic</li>
+										<li>antioxidant</li>
+										<li>euphoriant</li>
+										<li>orexigenic</li>
+										<li>bronchial dilator</li>
+										<li>lowers intraocular pressure</li>
+									</ul>
+								</div>
 
-          </div>
+							</div>
+							<div class="item">
+								<img src="<%= asset_path('gallery4_edit_green.jpg') %>" class="cann-molecule"></img>
+								<h2>Tetrahydrocannabivarin (THCV)</h2>
+								<ul class="cannab-attr">
+									<li>anoretic</li>
+									<li>analgesic</li>
+									<li>antiepileptic</li>
+									<li>promotes bone growth</li>
+								</ul>
+
+							</div>
+						</div>
+					</div><!--/Carousel-->
+
         </div><!--/row-->
       </div><!--/container-->
     </div><!--/green-->
