fit carousel img and text in the same row

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -327,8 +327,8 @@ ul {
 /* GREEN SECTION - CAROUSEL */
 
 #green {
-	padding-top: 90px;
-	padding-bottom: 60px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	min-height: 300px;
 	background: #03C9A9;
 	color: white;
@@ -340,6 +340,7 @@ ul {
 } 
 
 .cann-molecule {
+/*	display: inline !important;*/
 	min-height: 468px;
 }
 
