add and it's benefits to cannab-header

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -177,7 +177,7 @@
 									<img src="<%= asset_path('gallery1_edit_green.jpg') %>" class="cann-molecule"></img>
 								</div>
 								<div class="col-md-6">
-									<h2>Cannabigerol (CBG)</h2>
+									<h2 class="cannab-header">Cannabigerol (CBG) and its benefits:</h2>
 									<ul class="cannab-attr">
 										<li>soporific</li>
 										<li>antimicrobial</li>
@@ -191,7 +191,7 @@
 									<img src="<%= asset_path('gallery2_edit_green.jpg') %>" class="cann-molecule"></img>
 								</div>
 								<div class="col-md-6">
-									<h2>Cannabidiol (CBD)</h2>
+									<h2 class="cannab-header">Cannabidiol (CBD) and its benefits:</h2>
 									<ul class="cannab-attr">
 										<li>antispasmodic</li>
 										<li>anxiolytic</li>
@@ -208,7 +208,7 @@
 									<img src="<%= asset_path('gallery3_edit_green.jpg') %>" class="cann-molecule"></img>
 								</div>
 								<div class="col-md-6">
-									<h2>Tetrahydrocannabinol (THC)</h2>
+									<h2 class="cannab-header">Tetrahydrocannabinol (THC) and its benefits:</h2>
 									<ul class="cannab-attr">
 										<li>analgesic</li>
 										<li>antioxidant</li>
@@ -221,14 +221,18 @@
 
 							</div>
 							<div class="item">
-								<img src="<%= asset_path('gallery4_edit_green.jpg') %>" class="cann-molecule"></img>
-								<h2>Tetrahydrocannabivarin (THCV)</h2>
-								<ul class="cannab-attr">
-									<li>anoretic</li>
-									<li>analgesic</li>
-									<li>antiepileptic</li>
-									<li>promotes bone growth</li>
-								</ul>
+								<div class="col-md-6">
+									<img src="<%= asset_path('gallery4_edit_green.jpg') %>" class="cann-molecule"></img>
+								</div>
+								<div class="col-md-6">
+									<h2 class="cannab-header">Tetrahydrocannabivarin (THCV) and its benefits:</h2>
+									<ul class="cannab-attr">
+										<li>anoretic</li>
+										<li>analgesic</li>
+										<li>antiepileptic</li>
+										<li>promotes bone growth</li>
+									</ul>
+								</div>
 
 							</div>
 						</div>
