--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -30,7 +30,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 centered">
-            <h1>Welcome to our new site.<br/>Sign up now & prepare to enjoy our service.</h1>
+            <h1>Welcome to Organic Galenicals.<br/>Sign up now & prepare to enjoy our service.</h1>
             <div class="mtb">
               <form id="new-user" action="/users" method="post"> 
 								<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
