--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -178,7 +178,8 @@ input {
 
 /* HEADER SECTION */
 #h {
-	background: image-url("organ_landingpg_bg.jpg") no-repeat center top;
+	background: image-url("headerbg.jpg") no-repeat center top;
+	opacity: 0.9;
 	padding-top: 180px;
 	text-align:center;
 	background-attachment: relative;
