update pie chart image

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,5 +1,5 @@
 <div id="h">
-	<div class="logo">ORGANIC GALENICALS</div>
+	<div class="logo">organic galenicals</div>
 	<div class="social hidden-xs">
 		<a href="#"><i class="ion-social-twitter"></i></a>
 		<a href="#"><i class="ion-social-instagram"></i></a>
@@ -33,7 +33,7 @@
 			</p> -->
 		</div>
 		<div class="col-md-6">
-			<img src="<%= asset_path('pie_chart.bmp') %>" class="img-responsive" alt="">
+			<img src="<%= asset_path('Pie_Chart.png') %>" class="img-responsive" alt="">
 		</div>
 	</div><!--/row-->
 </div><!--/container-->
