--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,24 +1,15 @@
-/*
- * Author: Carlos Alvarez
- * URL: http://alvarez.is
- *
- * Project Name: Landing Sumo - Theme 20
- * URL: http://LandingSumo.com
- * Version: 1.0
- * Exclusive Freebie for BlackTie.co
- */
-
 /*	################################################################
 	1. GENERAL STRUCTURES
 ################################################################# */
 
 /* Import fonts */
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900);
+@import url(http://fonts.googleapis.com/css?family=Amatic+SC|Lobster+Two);
 
 * { 
 	margin: 0;
 	padding: 0px;
-    font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif;
 } 
 body { 
 	background: #fff; 
@@ -27,7 +18,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif;
 	font-weight: 300;
 }
 
@@ -35,7 +26,7 @@ h1, h2, h3, h4, h5, h6 {
 p { 
 	padding: 0; 
 	margin-bottom: 12px; 
-    font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	font-size: 16px; 
 	line-height: 26px;
@@ -200,9 +191,10 @@ input {
 }
 
 #h .logo {
-	top: 30px;
+	top: 10px;
 	left: 45px;
-	font-size: 18px;
+	font-family: 'Amatic SC', cursive;
+	font-size: 32px;
 	font-weight: 900;
 	position:absolute; 
 }
@@ -223,9 +215,8 @@ input {
 }
 
 #h h1 {
-	font-weight: 700;
 	color: white;
-	font-size: 40px;
+	font-size: 52px;
 }
 
 /* Store Links */
@@ -345,7 +336,11 @@ ul {
 }
 
 .cannab-header {
-	padding-top: 30px;
+	margin: 60px 0px 0px 70px;
+}
+
+ul.cannab-attr {
+	margin: 20px 0px 0px 135px;
 }
 
 ul.cannab-attr > :first child {
@@ -354,12 +349,12 @@ ul.cannab-attr > :first child {
 
 ul.cannab-attr > li {
 	padding: 0;
-	padding-left: 50px;
   margin-bottom: 12px;
   font-weight: 300;
   font-size: 16px;
   line-height: 26px;
   letter-spacing: 1px;
+	list-style-type: disc;
 }
 
 /* FOOTER */
