update root and thank_you view

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -10,10 +10,10 @@
 			<h1>Welcome to Organic Galenicals.<br/>Sign up now & prepare to enjoy our service.</h1>
 			<div class="col-md-8 col-md-offset-2 centered">
 				<div class="mtb">
-					<form id="new-user" action="/users" method="post"> 
+					<form id="new-user" action="/signup" method="post"> 
 						<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
-						<input type="email" name="email" class="subscribe-input" placeholder="Enter your e-mail address..." required>
+						<input type="email" name="user[email]" class="subscribe-input" placeholder="Enter your e-mail address..." required>
 						<button class='btn btn-conf btn-green' type="submit">Sign up!</button>
 					</form>
 				</div><!--/mt-->
