--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -122,6 +122,7 @@ input {
 }
 
 .subscribe-input {
+	color: #000;
 	float: left;
 	width: 65%;
 	text-align: left;
@@ -191,7 +192,7 @@ input {
 }
 
 #h .logo {
-	top: 10px;
+	top: 15px;
 	left: 45px;
 	font-family: 'Amatic SC', cursive;
 	font-size: 32px;
