--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -114,7 +114,6 @@ input {
 	line-height: 20px;
 	padding: 15px 30px 16px;
 	border: 1px solid #b9b9af;
-	margin-bottom: 10px;
 	background-color: #fff;
 	opacity: 0.9;
 	-webkit-transition: background-color 0.2s;
@@ -218,6 +217,19 @@ input {
 #h h1 {
 	color: white;
 	font-size: 52px;
+}
+
+#h div.error {
+	display: inline-block;
+	float: left;
+	color: #D90000;
+  font-weight: 600;
+  margin-left: 30px;
+  font-size: 20px;
+}
+
+#h form#new-user {
+	clear: both;
 }
 
 /* Store Links */
