--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -8,8 +8,13 @@
 	<div class="container">
 		<div class="row">
 			<h1>Welcome to Organic Galenicals.<br/>Sign up now & prepare to enjoy our service.</h1>
-			<div class="col-md-8 col-md-offset-2 centered">
+			<div class="col-md-8 col-md-offset-2">
 				<div class="mtb">
+					<% if flash.now[:errors] %>
+						<% flash[:errors].each do |error| %>
+							<div class="error"><%= error %></div>
+						<% end %>
+					<% end %>
 					<form id="new-user" action="/signup" method="post"> 
 						<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
@@ -25,8 +30,9 @@
 <div class="container ptb">
 	<div class="row">
 		<div class="col-md-6">
-			<h2>All the features you want in this kind of apps you'll got it here.</h2>
-			<p class="mt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+			<h2>Phyto-Cannabinoids</h2>
+			<h3>Plant-Based Solutions for the 21st Century</h3>
+			<p class="mt">All the major phyto-cannabinoids extracted from the Cannabis sativa or Cannabis indica plant and the medicinal action they stimulate. Cannabidiol (CBD) provides relief from a wide range of symptoms including pain (analgesic), spasms (antispasmodic) and epileptic seizures. Cannabigerol (CBG) and Tetrahydrocannabinol (THC) are able to prevent proliferation and migration cancer cells. Cannabichromene (CBC) holds the greatest ability to kill those same cancer cells.</p>
 			<!-- <p class="store">
 				<a href="#"><img src="<%= asset_path('app-store.png') %>" height="50" alt=""></a>
 				<a href="#"><img src="<%= asset_path('google-play.png') %>" height="50" alt=""></a>
@@ -228,7 +234,6 @@
 
 			<p class="mt">
 				<a href="#"><i class="ion-social-twitter"></i></a>
-				<a href="#"><i class="ion-social-dribbble"></i></a>
 				<a href="#"><i class="ion-social-instagram"></i></a>
 				<a href="#"><i class="ion-social-facebook"></i></a>
 				<a href="#"><i class="ion-social-pinterest"></i></a>
