add text for pie chart

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -30,9 +30,9 @@
 <div class="container ptb">
 	<div class="row">
 		<div class="col-md-6">
-			<h2>Phyto-Cannabinoids</h2>
-			<h3>Plant-Based Solutions for the 21st Century</h3>
-			<p class="mt">All the major phyto-cannabinoids extracted from the Cannabis sativa or Cannabis indica plant and the medicinal action they stimulate. Cannabidiol (CBD) provides relief from a wide range of symptoms including pain (analgesic), spasms (antispasmodic) and epileptic seizures. Cannabigerol (CBG) and Tetrahydrocannabinol (THC) are able to prevent proliferation and migration cancer cells. Cannabichromene (CBC) holds the greatest ability to kill those same cancer cells.</p>
+			<h2 id="phytocann">Phyto-Cannabinoids</h2>
+			<h3 id="phytocann">Plant-Based Solutions for the 21st Century</h3>
+			<p class="mt">All the major phyto-cannabinoids are extracted from either the <em>Cannabis sativa</em> or <em>Cannabis indica</em> plant. They stimulate an impressive number of medicinal actions ranging from promoting bone growth to treating fungal infections. Cannabidiol (CBD) provides relief from the largest number of symptoms including pain (analgesic), spasms (antispasmodic) and epileptic seizures. Cannabigerol (CBG) and Tetrahydrocannabinol (THC) are able to prevent proliferation and migration of cancer cells, while Cannabichromene (CBC) holds the greatest ability to actually kill those same cancer cells.</p>
 			<!-- <p class="store">
 				<a href="#"><img src="<%= asset_path('app-store.png') %>" height="50" alt=""></a>
 				<a href="#"><img src="<%= asset_path('google-play.png') %>" height="50" alt=""></a>
