stylize site header

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -5,6 +5,7 @@
 /* Import fonts */
 @import url(https://fonts.googleapis.com/css?family=Lato:300,400,700,900);
 @import url(https://fonts.googleapis.com/css?family=Amatic+SC|Lobster+Two);
+@import url(https://fonts.googleapis.com/css?family=Ubuntu|PT+Serif+Caption|Lobster|Droid+Serif|Yanone+Kaffeesatz|Montserrat|Bree+Serif|Francois+One|Comfortaa|Voltaire|Alice|Doppio+One);
 
 * { 
 	margin: 0;
@@ -228,6 +229,10 @@ input {
 #h h1 {
 	color: white;
 	font-size: 52px;
+	display: inline-block;
+	line-height: inherit;
+	font-family: 'Bree Serif', sans-serif;
+	text-shadow: 2px 2px rgba(0,0,0,0.5);
 }
 
 #h div.error {
@@ -241,6 +246,14 @@ input {
 
 #h form#new-user {
 	clear: both;
+}
+
+strong.orange {
+	color: rgb(255, 121, 10);
+}
+
+span.lobster {
+	font-family: 'Lobster', sans-serif;
 }
 
 /* Store Links */
