--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -227,12 +227,12 @@ input {
 }
 
 #h h1 {
-	color: white;
+	color: rgb(218,218,218);
 	font-size: 52px;
 	display: inline-block;
 	line-height: inherit;
 	font-family: 'Bree Serif', sans-serif;
-	text-shadow: 2px 2px rgba(0,0,0,0.5);
+	text-shadow: 2px 2px rgba(0,0,0,0.8);
 }
 
 #h div.error {
