You Can Contact Us --> Contact Us

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -229,7 +229,7 @@
 <div id="f">
 	<div class="container">
 		<div class="row centered">
-			<h2>You Can Contact Us</h2>
+			<h2>Contact Us</h2>
 			<h5>HELLO@CANNABCON.COM</h5>
 
 			<p class="mt">
