Sign up now --> Sign up

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -7,7 +7,7 @@
 	</div>
 	<div class="container">
 		<div class="row">
-			<h1>Welcome to <strong class="orange">Organic Galenicals.</strong><br/>Sign up now & prepare to <span class="lobster">enjoy</span> our service.</h1>
+			<h1>Welcome to <strong class="orange">Organic Galenicals.</strong><br/>Sign up & prepare to <span class="lobster">enjoy</span> our service.</h1>
 			<div class="col-md-8 col-md-offset-2">
 				<div class="mtb">
 					<% if flash.now[:errors] %>
