--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -180,8 +180,7 @@ input {
 
 /* HEADER SECTION */
 #h {
-	background: image-url("headerbg.jpg") no-repeat center top;
-	opacity: 0.7;
+	background: image-url("headerbg_80.png") no-repeat center top;
 	padding-top: 180px;
 	text-align:center;
 	background-attachment: relative;
