use headerbg @ 70% opacity

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -180,7 +180,7 @@ input {
 
 /* HEADER SECTION */
 #h {
-	background: image-url("headerbg_80.png") no-repeat center top;
+	background: image-url("headerbg_70.png") no-repeat center top;
 	padding-top: 180px;
 	text-align:center;
 	background-attachment: relative;
@@ -225,7 +225,7 @@ input {
 }
 
 #h h1 {
-	color: rgb(218,218,218);
+	color: #FFFFFF;
 	font-size: 52px;
 	display: inline-block;
 	line-height: inherit;
