add shadow to logo

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -207,6 +207,7 @@ input {
 	font-size: 32px;
 	font-weight: 900;
 	position:absolute; 
+	text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 #h .social {
@@ -230,7 +231,7 @@ input {
 	display: inline-block;
 	line-height: inherit;
 	font-family: 'Bree Serif', sans-serif;
-	text-shadow: 3px 3px rgba(0,0,0,0.8);
+	text-shadow: 3px 3px rgba(0,0,0,0.75);
 }
 
 #h div.error {
