add FB and twitter links

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -3,7 +3,7 @@
 	<div class="social hidden-xs">
 		<a href=https://twitter.com/Orgalen_com""><i class="ion-social-twitter"></i></a>
 		<a href="#"><i class="ion-social-instagram"></i></a>
-		<a href="#"><i class="ion-social-facebook"></i></a>
+		<a href="https://www.facebook.com/pages/Organic-Galenicals/1632884920283091"><i class="ion-social-facebook"></i></a>
 	</div>
 	<div class="container">
 		<div class="row">
@@ -233,9 +233,9 @@
 			<h5>HELLO@CANNABCON.COM</h5>
 
 			<p class="mt">
-				<a href="#"><i class="ion-social-twitter"></i></a>
+				<a href="https://twitter.com/Orgalen_com"><i class="ion-social-twitter"></i></a>
 				<a href="#"><i class="ion-social-instagram"></i></a>
-				<a href="#"><i class="ion-social-facebook"></i></a>
+				<a href="https://www.facebook.com/pages/Organic-Galenicals/1632884920283091"><i class="ion-social-facebook"></i></a>
 				<a href="#"><i class="ion-social-pinterest"></i></a>
 				<a href="#"><i class="ion-social-tumblr"></i></a>
 			</p>
