--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -241,6 +241,7 @@ input {
   font-weight: 600;
   margin-left: 30px;
   font-size: 20px;
+	text-shadow: 2px 2px 2px rgba(0,0,0,1); 
 }
 
 #h form#new-user {
