--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -13,6 +13,9 @@
 					<% if flash.now[:errors] %>
 						<% flash[:errors].each do |error| %>
 							<div class="error"><%= error %></div>
+							<style>
+							input:enabled { background: red }
+							</style>
 						<% end %>
 					<% end %>
 					<form id="new-user" action="/signup" method="post"> 
