--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,7 +1,7 @@
 <div id="h">
 	<div class="logo">organic galenicals</div>
 	<div class="social hidden-xs">
-		<a href=https://twitter.com/Orgalen_com""><i class="ion-social-twitter"></i></a>
+		<a href="https://twitter.com/Orgalen_com" target="_blank"><i class="ion-social-twitter"></i></a>
 		<a href="#"><i class="ion-social-instagram"></i></a>
 		<a href="https://www.facebook.com/pages/Organic-Galenicals/1632884920283091"><i class="ion-social-facebook"></i></a>
 	</div>
