get bg colors to match

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -359,7 +359,7 @@ ul {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	min-height: 300px;
-	background: #B1E451;
+	background: #AFE36A;
 }
 
 #green tgr {
