--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -2,8 +2,8 @@
 	<div class="logo">organic galenicals</div>
 	<div class="social hidden-xs">
 		<a href="https://twitter.com/Orgalen_com" target="_blank"><i class="ion-social-twitter"></i></a>
-		<a href="#"><i class="ion-social-instagram"></i></a>
-		<a href="https://www.facebook.com/pages/Organic-Galenicals/1632884920283091"><i class="ion-social-facebook"></i></a>
+		<a href="#" target="_blank"><i class="ion-social-instagram"></i></a>
+		<a href="https://www.facebook.com/pages/Organic-Galenicals/1632884920283091" target="_blank"><i class="ion-social-facebook"></i></a>
 	</div>
 	<div class="container">
 		<div class="row">
@@ -236,11 +236,11 @@
 			<h5>HELLO@CANNABCON.COM</h5>
 
 			<p class="mt">
-				<a href="https://twitter.com/Orgalen_com"><i class="ion-social-twitter"></i></a>
-				<a href="#"><i class="ion-social-instagram"></i></a>
-				<a href="https://www.facebook.com/pages/Organic-Galenicals/1632884920283091"><i class="ion-social-facebook"></i></a>
-				<a href="#"><i class="ion-social-pinterest"></i></a>
-				<a href="#"><i class="ion-social-tumblr"></i></a>
+				<a href="https://twitter.com/Orgalen_com" target="_blank"><i class="ion-social-twitter"></i></a>
+				<a href="#"><i class="ion-social-instagram" target="_blank"></i></a>
+				<a href="https://www.facebook.com/pages/Organic-Galenicals/1632884920283091" target="_blank"><i class="ion-social-facebook"></i></a>
+				<a href="#"><i class="ion-social-pinterest" target="_blank"></i></a>
+				<a href="#"><i class="ion-social-tumblr" target="_blank"></i></a>
 			</p>
 			<h6 class="mt">COPYRIGHT 2015</h6>
 		</div><!--/row-->
